attempt fix to hide URL bar on mobile (2)

--- a/style/style.css
+++ b/style/style.css
@@ -2,8 +2,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     height: 100vh;
+    width: 100vw;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .game-container {
